# acg_project

./: .gitignore  ACG_Project.rc  CMakeLists.txt  README.md  requirements.txt  setup_loader.bat  vcpkg.json
include/: BVH.h  Camera.h  DX12Helper.h  Denoiser.h  GUI.h  Light.h  LogRedirector.h  MTLParser.h  Material.h  MaterialLayers.h  MathUtils.h  Mesh.h  Renderer.h  Sampler.h  Scene.h  SceneLoader.h  Texture.h  VirtualTextureSystem.h  resource.h
loader/: base_loader.py  binary_exporter.py  bpy_loader.py  data_structures.py  main.py  wavefront_loader.py
shaders/: PathTracing.hlsl  Random.hlsli  Raytracing.hlsl  Structures.hlsli
src/: BVH.cpp  Camera.cpp  Denoiser.cpp  GUI.cpp  Light.cpp  MTLParser.cpp  Material.cpp  MathUtils.cpp  Mesh.cpp  Renderer.cpp  Sampler.cpp  Scene.cpp  Texture.cpp  VirtualTextureSystem.cpp  main.cpp
tests/: download.py  unzip.py
